Add some notations

--- a/main.tex
+++ b/main.tex
@@ -11,10 +11,10 @@
 \maketitle% this prints the handout title, author, and date
 
 \begin{abstract}
-\noindent
-This document is a ongoing book of my notes and thoughts during my PhD.
-Inspired by the Tufte-Handout Style \thanks{Inspired by Edward~R. Tufte!}, this handout is built
-using \href{https://github.com/Tufte-LaTeX/tufte-latex}{\texttt{tufte-latex}}.
+    \noindent
+    This document is an ongoing book of my notes and thoughts during my PhD.
+    Inspired by the Tufte-Handout Style \thanks{Inspired by Edward~R. Tufte!},
+    this handout is built using \href{https://github.com/Tufte-LaTeX/tufte-latex}{\texttt{tufte-latex}}.
 \end{abstract}
 
 \input{chapters/0-preface}
