--- a/tex/macro.tex
+++ b/tex/macro.tex
@@ -32,3 +32,5 @@
 % https://stackoverflow.com/questions/55036409/latex-verbatimhow-to-show-the-file-directoy-created-by-tree-command
 \usepackage[utf8]{inputenc}
 \usepackage{pmboxdraw}
+
+\usepackage[ruled,vlined]{algorithm2e}
