Include old notes

--- a/main.bib
+++ b/main.bib
@@ -1,65 +1,55 @@
-@BOOK{Tufte2006,
-	author = {Edward R. Tufte},
-	title = {Beautiful Evidence},
-	year = {2006},
-	publisher = {Graphics Press, {LLC}},
-	month = {May},
-	edition = {First},
-	place = {Cheshire, Connecticut},
-	isbn = {0-9613921-7-7}
+@article{turnerExactAnytimevalidConfidence2023,
+  title = {Exact Anytime-Valid Confidence Intervals for Contingency Tables and Beyond},
+  author = {Turner, Rosanne J. and Gr{\"u}nwald, Peter D.},
+  year = {2023},
+  month = jul,
+  journal = {Statistics \& Probability Letters},
+  volume = {198},
+  eprint = {2203.09785},
+  primaryclass = {stat},
+  pages = {109835},
+  doi = {10.1016/j.spl.2023.109835},
+  urldate = {2025-03-21},
+  archiveprefix = {arXiv}
 }
 
-@BOOK{Tufte2001,
-	author = {Edward R. Tufte},
-	title = {The Visual Display of Quantitative Information},
-	publisher = {Graphics Press},
-	year = {2001},
-	address = {Cheshire, Connecticut},
-	isbn = {0-9613921-4-2}
+@article{turnerGenericEvariablesExact2024,
+  title = {Generic {{E-variables}} for Exact Sequential $k$-Sample Tests That Allow for Optional Stopping},
+  author = {Turner, Rosanne J. and Ly, Alexander and Gr{\"u}nwald, Peter D.},
+  year = {2024},
+  month = may,
+  journal = {Journal of Statistical Planning and Inference},
+  volume = {230},
+  eprint = {2106.02693},
+  primaryclass = {cs, math, stat},
+  pages = {106116},
+  doi = {10.1016/j.jspi.2023.106116},
+  urldate = {2025-01-09},
+  archiveprefix = {arXiv}
 }
 
-@BOOK{Tufte1990,
-	author = {Edward R. Tufte},
-	title = {Envisioning Information},
-	publisher = {Graphics Press},
-	year = {1990},
-	address = {Cheshire, Connecticut},
-	isbn = {0-9613921-1-8}
+@article{grunwaldSafeTesting2024,
+  title = {Safe Testing},
+  author = {Gr{\"u}nwald, Peter and {de Heide}, Rianne and Koolen, Wouter},
+  year = {2024},
+  month = nov,
+  journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume = {86},
+  number = {5},
+  eprint = {1906.07801},
+  primaryclass = {cs, math, stat},
+  pages = {1091--1128},
+  doi = {10.1093/jrsssb/qkae011},
+  urldate = {2025-03-06},
+  archiveprefix = {arXiv}
 }
 
-@BOOK{Tufte1997,
-	author = {Edward R. Tufte},
-	title = {Visual Explanations},
-	publisher = {Graphics Press},
-	year = {1997},
-	address = {Cheshire, Connecticut},
-	isbn = {0-9613921-2-6}
+@phdthesis{haoEvaluesAnytimevalidInference2025,
+  title = {E-Values for Anytime-Valid Inference with Exponential Families},
+  author = {Hao, Yunda},
+  year = {2025},
+  month = feb,
+  address = {Leiden},
+  urldate = {2025-03-14},
+  school = {Leiden University}
 }
-
-@BOOK{Bringhurst2005,
-	author = {Robert Bringhurst},
-	title = {The Elements of Typography},
-	publisher = {Hartley \& Marks},
-	year = {2005},
-	edition = {3.1},
-	isbn = {0-88179-205-5}
-}
-
-@BOOK{Mittelbach2004,
-	author = {Frank Mittelbach and Michel Goossens},
-	title = {The \LaTeX\ Companion},
-	publisher = {Addison--Wesley},
-	year = {2004},
-	edition = {Second},
-	isbn = {0-201-36299-6}
-}
-
-@MISC{pkg-geometry,
-    author = {Hideo Umeki},
-    title = {The \texttt{geometry} package},
-    year = {2008},
-    month = dec,
-    howpublished = {\url{http://ctan.org/pkg/geometry}}
-}
-
-
