--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{tufte-handout}
+\documentclass[nobib]{tufte-handout}
 
 \title{Notes During PhD}
 
@@ -23,9 +23,9 @@
 
 \input{chapters/1-intro}
 
+\clearpage
+
 \bibliography{main}
 \bibliographystyle{alpha}
-
-
 
 \end{document}
