Update macro and setup

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 
 \author{Yongqi Wang}
 
+\input{setup}
 \input{macro}
 
 \begin{document}
@@ -24,6 +25,8 @@
 \input{chapters/1-intro}
 
 \clearpage
+
+\nocite{*}
 
 \bibliography{main}
 \bibliographystyle{alpha}
