--- a/main.bib
+++ b/main.bib
@@ -53,3 +53,34 @@
   urldate = {2025-03-14},
   school = {Leiden University}
 }
+
+@phdthesis{liEstimationMixtureModels1999,
+  title = {Estimation of Mixture Models},
+  author = {Li, Qiang Jonathan},
+  year = {1999},
+  address = {USA},
+  urldate = {2025-01-15},
+  school = {Yale University},
+  annotation = {AAI9931011\\
+ISBN-10: 0599311037}
+}
+
+@misc{haoEvalues$k$sampleTests2024,
+  title = {E-Values for $k$-Sample Tests with Exponential Families},
+  author = {Hao, Yunda and Gr{\"u}nwald, Peter and Lardy, Tyron and Long, Long and Adams, Reuben},
+  year = {2024},
+  month = jan,
+  number = {arXiv:2303.00471},
+  eprint = {2303.00471},
+  primaryclass = {math, stat},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2303.00471},
+  urldate = {2024-09-04},
+  archiveprefix = {arXiv}
+}
+
+@phdthesis{brindaAdaptiveEstimationGaussian2018,
+  title = {Adaptive Estimation with Gaussian Radial Basis Mixtures},
+  author = {Brinda, William David},
+  year = {2018}
+}
