--- a/main.bib
+++ b/main.bib
@@ -82,5 +82,7 @@ ISBN-10: 0599311037}
 @phdthesis{brindaAdaptiveEstimationGaussian2018,
   title = {Adaptive Estimation with Gaussian Radial Basis Mixtures},
   author = {Brinda, William David},
-  year = {2018}
+  year = {2018},
+  school = {Yale University}
 }
+
