--- a/main.tex
+++ b/main.tex
@@ -1,60 +1,70 @@
-\documentclass[aos]{imsart}
+\documentclass[aos,preprint]{imsart}
+% \usepackage[T1]{fontenc}                         % font
+% \usepackage{lmodern}
+\usepackage[font=small,labelfont=bf]{caption}
 
 \input{macro}
-
-\title{Notes During PhD}
-
-\author{Yongqi Wang}
-
-\date{31 March 2025} % without \date command, current date is supplied
 
 \usepackage[colorlinks,citecolor=blue,urlcolor=blue,colorlinks=true,linkcolor=blue]{hyperref}
 \usepackage[authoryear]{natbib}                  % aos cite
 \let\mkbibnamefamily\textsc                      % textsc in author names
-\usepackage{physics}                             % \dv, \vec, ...
-\usepackage{bm}                                  % \bm
 \usepackage[ruled,vlined,linesnumbered]{algorithm2e}
-\usepackage{caption}
 \usepackage{subcaption}
 \usepackage[normalem]{ulem}                      % sout
 \usepackage{todonotes}                           % todo
 \usepackage[mode=buildnew]{standalone}
 \usepackage{standalone}
+\usepackage{enumitem}
+\usepackage{xurl}                                % long url break
+\setlist[itemize]{itemsep=\parskip}              % adjusts vertical space in itemize
+\setlist[enumerate]{itemsep=\parskip}            % adjusts vertical space in enumerate
+\numberwithin{equation}{section}
+\usepackage{graphicx}                            % allow embedded images
+\setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
+\graphicspath{{fig/}}                            % set of paths to search for images
+
 % \usepackage{enumerate}                           %i or I in numbered list
 % \usepackage[margin=3cm]{geometry}                % DO NOT CHANGE in aos
 % \usepackage{indentfirst}                         % indent first line after section
 
-\numberwithin{equation}{section}
+%%%%%%%%%%%
+% PROJECT %
+%%%%%%%%%%%
 
-
-%% 
-\usepackage{graphicx} % allow embedded images
-\setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
-\graphicspath{{fig/}} % set of paths to search for images
-\usepackage{amsmath}  % extended mathematics
-\usepackage{booktabs} % book-quality tables
-\usepackage{units}    % non-stacked fractions and better unit spacing
-\usepackage{multicol} % multiple column layout facilities
-\usepackage{lipsum}   % filler text
-\usepackage{fancyvrb} % extended verbatim environments
-\fvset{fontsize=\normalsize}% default font size for fancy-verbatim environments
-
-\usepackage{enumitem}
-\setlist[itemize]{itemsep=\parskip}    % adjusts vertical space in itemize
-\setlist[enumerate]{itemsep=\parskip}  % adjusts vertical space in enumerate
-
-\usepackage{xurl} % long url break
-
+% show plain tex
+\usepackage{fancyvrb}                            % extended verbatim environments
+\fvset{fontsize=\normalsize}                     % default font size for fancy-verbatim environments
 % https://stackoverflow.com/questions/55036409/latex-verbatimhow-to-show-the-file-directoy-created-by-tree-command
 \usepackage[utf8]{inputenc}
 \usepackage{pmboxdraw}
 
-\usepackage[ruled,vlined]{algorithm2e}
+\newcommand{\hypN}{\mathcal{H}_0}
+\newcommand{\hypA}{\mathcal{H}_1}
+\newcommand{\E}{\texttt{E}}
+\newcommand{\CS}[1]{\textsc{CS}_{\alpha, ({#1})}}
+\newcommand{\KL}[2]{\mathrm{D}_{\mathrm{KL}}({#1} \Vert {#2})}
+
+\newcommand{\meanspace}{\ensuremath{{\mathtt M}}}
+\newcommand{\canspace}{\ensuremath{\mathtt{B}}}
+
+\newcommand{\ThetaCan}{\ensuremath{\Theta_{\textsc{can}}}}
+\newcommand{\ThetaMean}{\ensuremath{\Theta_{\textsc{mean}}}}
+
+\newcommand{\Yongqi}[1]{\todo[inline, color=green!10]{  #1 }}
 
 
 \begin{document}
 
-\maketitle
+\begin{frontmatter}
+\title{Notes During PhD}
+
+\begin{aug}
+\author[A]{\fnms{Yongqi}~\snm{Wang} \ead[label=a]{yongqi@cwi.nl}}
+\address[A]{Centrum Wiskunde \& Informatica, Amsterdam, The Netherlands\printead[presep={\ }]{a}.}
+\end{aug}
+
+\end{frontmatter}
+
 
 \tableofcontents
 
@@ -69,11 +79,13 @@
 
 \input{chapters/app-integral}
 
+\input{chapters/exp-family}
+
 \clearpage
 
 \nocite{*}
 
 \bibliography{main}
-\bibliographystyle{alpha}
+\bibliographystyle{imsart-nameyear}
 
 \end{document}
